# ai_bot

./: .env  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
app/: api.py  data.txt  data2.txt  db.py  helper.py  models.py  scrapping.py  settings.py
migrations/: env.py
migrations/versions/: ad0f19ffa591_.py
