[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["Harut <har.avetisyan2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
bs4 = "^0.0.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
alembic = "^1.13.1"
pgvector = "^0.2.4"
asyncpg = "^0.29.0"
openai = "^1.8.0"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
